2000-07-03 00:12:26  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnsoup.el: Use expand-file-name throughtout.

2000-07-03 00:07:51  Kjetil Torgrim Homme  <kjetilho@ifi.uio.no>

	* nnmail.el (nnmail-read-incoming-hook): New example.

2000-07-02 23:17:23  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-view.el (mm-inline-text): Check whether the text has already
	been decoded.

2000-07-04 15:17:05  ShengHuo ZHU  <zsh@cs.rochester.edu>

	* nnslashdot.el (nnslashdot-sid-strip): To strip or not to strip?

2000-07-03  Stainless Steel Rat <ratinox@peorth.gweep.net>

	* gnus-sum.el (gnus-recenter): Fix horizontal recenter.

2000-07-03  Simon Josefsson  <simon@josefsson.org>

	* gnus-sum.el (gnus-update-marks): Don't propagate download and
	unsend flags.

2000-07-03  Simon Josefsson  <jas@pdc.kth.se>

	* nnimap.el (nnimap-open-connection): Don't look up virtual server
	name in authinfo (.authinfo now support ports, no need for the
	hack).
	(nnimap-split-find-rule): Fix.
	(nnimap-open-connection): Look for nnimap-server-address in authinfo.

2000-07-03  Paul Stodghill <stodghil@CS.Cornell.EDU>

	* message.el (message-unquote-tokens): Remove all quotes.

2000-07-03 00:29:08  Julien Gilles  <julien.gilles@bcv01y01.vz.cit.alcatel.fr>

	* gnus-ml.el: New file. 

2000-07-02 16:11:25  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nnultimate.el (nnultimate-request-close): New function.

	* gnus-start.el (gnus-clear-system): Clear nnmail-split-history. 

2000-06-18  Norbert Koch  <norbert@s.netic.de>

	* Makefile.in: Better support for xemacs builds

Sun Jul  2 15:11:35 2000  Lars Magne Ingebrigtsen  <lmi@quimbies.gnus.org>

	* gnus.el: Gnus v5.8.7 is released.

2000-05-19 06:32:52  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* mm-decode.el (mm-insert-part): Characters doubly decoded.

2000-07-01 10:23:08  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* message.el (message-do-fcc): Encode MIME.

2000-06-28 13:52:57  Shenghuo ZHU  <zsh@cs.rochester.edu>

	* lpath.el: Fbind image-size.
